--- a/sass/components/_plats_details.scss
+++ b/sass/components/_plats_details.scss
@@ -107,6 +107,10 @@ img {
             margin-right: 90px;
         }
 
+        &:hover .title {
+            margin-right: 90px;
+        }
+
         p {
             margin: 0;
             padding: 0;
@@ -135,6 +139,7 @@ img {
     .page {
         background-color: white;
     }
+	
     .container {
         margin: 10px auto;
         width: 600px;
@@ -175,9 +180,11 @@ img {
     .plat-price:nth-child(1) {
         animation-delay: 0.3s;
     }
+
     .plat-price:nth-child(2) {
         animation-delay: 0.6s;
     }
+
     .plat-price:nth-child(3) {
         animation-delay: 0.9s;
     }
